--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
-    "@react-native-firebase/app": "^18.1.0",
-    "@react-native-firebase/auth": "^18.1.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-geolocation-service": "^5.3.1",
@@ -29,7 +28,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
-    "react-native-toast-message": "^2.1.6",
+    "react-native-simple-toast": "^2.0.1",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1"
   },
