--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@realm/react": "^0.5.1",
     "axios": "^1.4.0",
+    "firebase": "^10.0.0",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-geolocation-service": "^5.3.1",
@@ -30,6 +32,7 @@
     "react-native-screens": "^3.22.0",
     "react-native-simple-toast": "^2.0.1",
     "react-redux": "^8.1.1",
+    "realm": "^11.10.1",
     "redux": "^4.2.1"
   },
   "devDependencies": {
