--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
+    "realm": "^11.10.1",
     "simple-node-logger": "^21.8.12"
   }
 }
