--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
-  "build": [
+  "builds": [
     {
-      "src": "./index.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
-  "route": [
+  "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "index.js"
     }
   ]
 }
