--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-simple-toast": "^2.0.1",
+    "react-native-websocket": "^1.0.2",
     "react-redux": "^8.1.1",
     "realm": "^11.10.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
