--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "realm": "^11.10.1",
-    "simple-node-logger": "^21.8.12"
+    "simple-node-logger": "^21.8.12",
+    "socket.io": "^4.7.1",
+    "ws": "^8.13.0"
   }
 }
