--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@realm/react": "^0.5.1",
     "axios": "^1.4.0",
     "firebase": "^10.0.0",
+    "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-geolocation-service": "^5.3.1",
@@ -29,10 +30,12 @@
     "react-native-maps": "^1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^3.8.1",
+    "react-native-phone-call": "^1.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-simple-toast": "^2.0.1",
+    "react-native-stars": "^1.2.2",
     "react-native-websocket": "^1.0.2",
     "react-redux": "^8.1.1",
     "realm": "^11.10.1",
