--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-native": "0.72.0",
+    "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-get-location": "^3.0.1",
@@ -31,15 +32,16 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^3.8.1",
     "react-native-phone-call": "^1.2.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-simple-toast": "^2.0.1",
-    "react-native-stars": "^1.2.2",
     "react-native-websocket": "^1.0.2",
     "react-redux": "^8.1.1",
-    "realm": "^11.10.1",
+    "realm": "^12.1.0",
     "redux": "^4.2.1",
+    "save": "^2.9.0",
     "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
